docs: generate docs
